Few things from stream
- Added Item Boost ability (+50% item efficiency per equip)
- Fixed /kingdomkeys ability command
- Fixed a few Marluxia's issues
- Made strength an int display for keyblade and keychain tooltips